Codes take from db

--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -13,34 +13,24 @@
          fxLayoutGap="24px"> 
         <div class="side-bar">
             <div class="sec-widget" 
+            id="idInHTML"
                  data-id="A"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
         </div>
         <div class="side-bar">
             <div class="sec-widget" 
+            id="idInHTML"
                 data-id="B"
-                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+                data-widget="a96f42e9705277dafb7f0113f5ea39b6">
             </div>
         </div>
-        <!--div class="side-bar">
+        <div class="side-bar">
             <div class="sec-widget" 
                 data-id="C"
                 data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
             </div>
         </div>
-        <div class="side-bar">
-            <div class="sec-widget" 
-                data-id="D"
-                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
-            </div>
-        </div>
-        <div class="side-bar">
-            <div class="sec-widget" 
-                data-id="E"
-                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
-            </div>
-        </div-->
     </div>
 
 </div>
