fix group info page

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -17,7 +17,7 @@
                 alt="User avatar"
                 style="height: 36px; border-radius: 18px;"
             />
-            <div class="truncate">{{member.userName}}</div>
+            <div class="truncate">{{member}}</div>
         </div>
     </div>
     <!-- list of tags displayed here -->
