Final codes functionality

--- a/src/app/codes-list/codes-list.component.html
+++ b/src/app/codes-list/codes-list.component.html
@@ -27,8 +27,9 @@
         </div>
         <div class="side-bar">
             <div class="sec-widget" 
+            id="idInHTML"
                 data-id="C"
-                data-widget="a9db7e9dfcb9c92c4908b96b62fa74bc">
+                data-widget="541bf9a9b4a65ba9cc9ab0d3246c5a66">
             </div>
         </div>
     </div>
