--- a/src/app/messaging/messaging.component.html
+++ b/src/app/messaging/messaging.component.html
@@ -44,6 +44,6 @@
 
 <div *ngIf="!chatID" fxLayout="row" fxLayoutAlign="center center" style="height: 100%; width: 100%;">
     <div style="font-size: 36px;">
-        Choose a chat!
+        Start Chatting!
     </div>
 </div>
