--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -1,23 +1,26 @@
 <div
-    fxLayout="column" fxLayoutAlign="space-between"
-    style="height: 100%; width: 100%; background-color: #adadff;">
-    <div fxLayout="row" fxLayoutGap="16px">
+    fxLayout="column" fxLayoutGap="24px"
+    style="height: 100%; width: 100%;">
+    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
         <img
             src="https://i.imgur.com/k2PZLZa.png"
             alt="Group avatar"
             style="height: 48px; border-radius: 24px;"
         />
-        <div *ngIf="chatDetails" class="truncate" style="font-size: 24px;">{{chatDetails.title}}</div>
+        <div *ngIf="chatDetails" style="font-size: 24px;">{{chatDetails.title}}</div>
     </div>
     <div fxLayout="column" fxLayoutGap="16px">
         <div>Members</div>
-        <div *ngFor="let member of members">
+        <div *ngFor="let member of members" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
             <img
                 src="https://i.imgur.com/k2PZLZa.png"
                 alt="User avatar"
                 style="height: 36px; border-radius: 18px;"
+                class="cursor-pointer"
+                (click)="navigateToUser(member.userId)"
             />
-            <div class="truncate">{{member.userName}}</div>
+            <div class="truncate cursor-pointer"
+            (click)="navigateToUser(member.userId)">{{member.userName}}</div>
         </div>
     </div>
     <!-- list of tags displayed here -->
