--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,8 @@
-<div style="height: 100vh; width: 100vw" fxLayout="column" fxLayoutAlign="center center">
+<div 
+    style="height: 100vh; width: 100vw; background-color: #adadff;"
+    fxLayout="column" fxLayoutAlign="center center">
 
-    <div fxLayout="column" fxLayoutGap="16px">
+    <div fxLayout="column" fxLayoutGap="16px" style="padding: 24px; background-color: white;">
 
       <button mat-raised-button color="primary" (click) = "goHome()">home</button>
 
@@ -31,14 +33,6 @@
 
           <button *ngIf = "match" (click)="NewEmail.disable(); save(NewEmail.value,'email')">Save</button>
         </span>
-
-
-
-
-
-
     </div>
-
-
 </div>
 
