update profile page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
 
     <div fxLayout="column" fxLayoutGap="16px" style="padding: 24px; background-color: white;">
 
-      <button mat-raised-button color="primary" (click) = "goHome()">home</button>
+      <button mat-raised-button color="primary" (click) = "goHome()">Home</button>
 
         <span *ngIf = "match" ng-hide ="editing">
           <button (click)= "NewName.enable()">Edit Name</button>
