chat++  title at login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <div
     style="height: 100vh; width: 100vw; background-color: #adadff;"
     fxLayout="column" fxLayoutAlign="center center">
+    <h1 style="padding-bottom: 36px; font-size: 40px;">Chat++</h1>
     <div style="background-color: white; padding: 24px;">
         <h2>Login</h2>
         <form>
